--- a/style/main.css
+++ b/style/main.css
@@ -29,6 +29,14 @@ textarea {
   border: none;
   outline: none;
   font-family: inherit;
+  letter-spacing: inherit;
+}
+
+img {
+  width: 100%;
+  height: 100%;
+  /* object-fit: cover; */
+  object-fit: contain;
 }
 
 html,
@@ -107,11 +115,23 @@ body {
   width: 100%;
   height: 32px;
   background: white;
-  margin-bottom: 8px;
-  border-radius: 4px;
+  margin-bottom: 10px;
+  border-radius: 6px;
   overflow: hidden;
+  display: flex;
+  align-items: center;
+  padding: 4px;
 }
 
+
+.products-search span {
+  width: 20px;
+  height: 20px;
+  background-color: white;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
 
 .products-search input {
   width: 100%;
@@ -119,6 +139,8 @@ body {
   background-color: white;
   border: none;
   outline: none;
+  padding: 2px 6px;
+  /* letter-spacing: 0.5px; */
 }
 
 .products-category {
@@ -155,12 +177,28 @@ body {
   border-radius: 8px;
   background: #fff;
   padding: 12px;
+  position: relative;
+}
+
+.product-card_qty {
+  color: #fff;
+  width: 22px;
+  height: 22px;
+  font-size: 14px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  position: absolute;
+  top: 14px;
+  right: 14px;
+  background: #ff9900;
+  border-radius: 50%;
 }
 
 .product-card_img {
   width: 100%;
   height: 120px;
-  background: #000;
+  /* background: #000; */
   border-radius: 6px;
 }
 
@@ -176,9 +214,32 @@ body {
   font-weight: 700;
 }
 
-.product-card_button_inc {}
+.product-card_buttons {
+  margin-top: 8px;
+  display: flex;
+  /* align-items: center; */
+  justify-content: space-between;
+}
 
-.product-card_button_inc {}
+.product-card_button_inc {
+  padding: 4px 24px;
+  border-radius: 6px;
+  /* background: #c70000; */
+  background: #bb2124;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.product-card_button_dec {
+  padding: 4px 24px;
+  border-radius: 6px;
+  background: #4BB543;
+  background: #22bb33;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
 
 .footer {
   width: 100%;
